# daily.zokomart.africa

./: .dockerignore  .env.example  .gitattributes  .gitignore  docker-compose.yml  goal.md  test-report-ltl-plan-5.md
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  e2e_admin.py  pyproject.toml
backend/app/: config.py  main.py  migrate.py  scheduler.py  schemas.py  security.py  seed.py  timeutil.py
backend/app/api/: public.py
backend/app/crawler/: contracts.py  discovery.py  extractor.py  fetcher.py  llm_extractor.py  pipeline.py
backend/app/logistics/: auth.py  capacity.py  models.py  notify.py  ops.py  orders.py  otp.py  schemas.py  sms.py  storage.py  sweep.py  trips_service.py
backend/app/models/: __init__.py  site.py  (+5 more)
backend/tests/: conftest.py  lg_helpers.py  test_admin_articles.py  test_admin_config.py  test_admin_countries_sites.py  test_admin_crawl.py  test_admin_integrity.py  test_ai_client.py  test_auth.py  test_discovery.py  test_extractor.py  test_fetcher.py  test_health.py  test_lg_admin_drivers.py  test_lg_admin_routes.py  test_lg_admin_vehicles.py  test_lg_auth.py  test_lg_browse.py  test_lg_capacity.py  test_lg_commissions.py  test_lg_config.py  test_lg_driver.py  test_lg_models.py  test_lg_notifications.py  test_lg_orders_close.py  test_lg_orders_cs.py  test_lg_orders_driver.py  test_lg_orders_shipper.py  test_lg_routes.py  test_lg_sms.py  test_lg_staff.py  test_lg_stats.py  test_lg_sweep.py  test_lg_trips.py  test_lg_uploads.py  test_lg_vehicles.py  test_migrate.py  test_models.py  test_pipeline.py  test_public_api.py  (+3 more)
(+146 files in other folders)
