[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "zokodaily-backend"
version = "0.1.0"
description = "ZokoDaily West Africa news aggregation backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "cryptography>=43",
    "pydantic-settings>=2.4",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "crawl4ai>=0.6",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
